secondfile/objects/Address__c.object
<CustomObject>
    <description>This object is created for AT&amp;T</description>
    <fields>
        <fullName>ASES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVPN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Street</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_End_Customer__c</fullName>
        <label>Related End Customer</label>
        <referenceTo>Related_End_Customer__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Site_Description__c</fullName>
        <label>Site Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <label>Site Name</label>
        <length>26</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit #</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sites</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADD-{000000}</displayFormat>
        <label>Site #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>